fixing some bugs in views and controllers

--- a/ArchivoUH/Views/Graduates/Create.cshtml
+++ b/ArchivoUH/Views/Graduates/Create.cshtml
@@ -255,19 +255,19 @@
                                     <div class="card-body">
                                         <div class="border-left-success">
                                             <div class="card-body">
-                                                Seleccione dependiendo si el graduado fue titulo de oro o mérito cientifico
+                                                Seleccione dependiendo si el graduado fue título de oro o mérito científico
                                             </div>
                                         </div>
                                         <!-- Causes -->
                                         <div class="row">
                                             <div class="col-md-2"></div>
-                                            <label class="h6 col-md-4">Titulo de Oro</label>
+                                            <label class="h6 col-md-4">Título de Oro</label>
                                             @Html.EditorFor(m => m.GoldTitle, new { htmlAttributes = new { @class = "form-control col-md-6" } })
                                         </div>
                                         <br />
                                         <div class="row">
                                             <div class="col-md-2"></div>
-                                            <label class="h6 col-md-4">Merito Cientifico</label>
+                                            <label class="h6 col-md-4">Mérito Científico</label>
                                             @Html.EditorFor(m => m.ScientistCredit, new { htmlAttributes = new { @class = "form-control col-md-6" } })
                                         </div>
                                     </div>
