clean account and manage controllers code and add icon to page header

--- a/ArchivoUH/Views/Administratives/Details.cshtml
+++ b/ArchivoUH/Views/Administratives/Details.cshtml
@@ -11,7 +11,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Detalles</title> 
+    <link rel="shortcut icon" type="image/x-icon" href=@Url.Content("~/Images/icon.ico") />
+    <title>Detalles</title>
 
     <!-- Custom fonts for this template-->
     <link href="~/sbAdmin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
