--- a/ArchivoUH/Views/Account/Login.cshtml
+++ b/ArchivoUH/Views/Account/Login.cshtml
@@ -12,6 +12,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" type ="image/x-icon" href=@Url.Content("~/Images/icon.ico") />
+
     <title>Iniciar Sesión</title>
 
     <!-- Custom fonts for this template-->
