--- a/ArchivoUH/Views/Administratives/Create.cshtml
+++ b/ArchivoUH/Views/Administratives/Create.cshtml
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" type="image/x-icon" href=@Url.Content("~/Images/icon.ico") />
     <title>Formulario</title>
 
     <!-- Custom fonts for this template-->
